ID: US5823 Name: Android: Remote Deposit - Processing Deposit: Submit Deposit Error Handling
Test Cases:
- Verified Layout for Check Error for both portrait and landscape (Generated timeout using mock service)
- Verified Inline errors are shown for amount field, top of screen and beneath images (Verified generating 422 in mock services)
- Verified inline errors are redisplayed after orientation change
- Verified Back press for Check Error page navigates user back to Review Deposit
- Verified navigation from Check Deposit Progress screen to Review Deposit with inline errors
- Verified navigation from Check Deposit Progress screen to Check Error

--- a/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_edit_detail_view.xml
@@ -58,13 +58,12 @@
 
         <TextView
             android:id="@+id/error_label"
-            style="@style/error_label"
+            style="@style/inline_error_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/top_label"
             android:layout_alignParentBottom="true"
             android:layout_below="@+id/editable_field"
-            android:singleLine="true"
             android:text="@string/bank_invalid_characters" />
 
         <ImageView
