--- a/Discover-Bank-Phone/res/values/styles_bank.xml
+++ b/Discover-Bank-Phone/res/values/styles_bank.xml
@@ -119,6 +119,11 @@
         <item name="android:ems">10</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:padding">7dp</item>
-    </style>
+   </style>
    
+   <style name="inline_error_label" parent="discover_text">
+        <item name="android:textColor">@color/error_indicator</item>
+        <item name="android:visibility">gone</item>     
+		<item name="android:textSize">@dimen/small_copy_min</item>
+    </style>
 </resources>
