--- a/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_account_summary_view.xml
@@ -5,61 +5,75 @@
     android:layout_height="wrap_content"
     android:fillViewport="true" >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/forms_inner_padding"
         android:paddingLeft="@dimen/forms_inner_padding"
-        android:paddingRight="@dimen/forms_inner_padding"       
-   		android:paddingBottom="@dimen/forms_inner_padding"
-        android:gravity="center_horizontal"
-        android:orientation="vertical" >
+        android:paddingRight="@dimen/forms_inner_padding" >
 
-         <LinearLayout
-		      android:layout_width="match_parent"
-		      android:layout_height="wrap_content"
-		      android:layout_weight="0.0625"
-		      android:layout_marginBottom="@dimen/between_related_elements_padding"
-		      android:orientation="vertical" >
-         	<include layout="@layout/status_bar" />
-         </LinearLayout>
-         
         <LinearLayout
-            android:id="@+id/bank_summary_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/between_related_elements_padding"
-            android:layout_weight="0.875"
-            android:orientation="vertical" />
-        
-         <Button
-            android:id="@+id/openAccount"
-            style="@style/call_to_action_theme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableRight="@drawable/external_link_icon"
-            android:layout_marginTop="@dimen/modal_top_margin"
-            android:drawablePadding="@dimen/between_related_elements_padding"
-            android:layout_gravity="center"
-            android:text="@string/bank_open_new_account" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
 
-         <RelativeLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/between_related_elements_padding"
+                android:layout_weight="0.0625"
+                android:orientation="vertical" >
+
+                <include layout="@layout/status_bar" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/bank_summary_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/between_related_elements_padding"
+                android:layout_weight="0.875"
+                android:orientation="vertical" />
+
+            <Button
+                android:id="@+id/openAccount"
+                style="@style/call_to_action_theme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/modal_top_margin"
+                android:drawablePadding="@dimen/between_related_elements_padding"
+                android:drawableRight="@drawable/external_link_icon"
+                android:text="@string/bank_open_new_account" />
+
+            <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/modal_footer_topmargin">
-                
-                <include layout="@layout/old_general_need_help_footer" android:id="@+id/need_help_footer"/>
-        </RelativeLayout> 
+                android:layout_marginTop="@dimen/modal_footer_topmargin" >
 
-        <TextView
-            android:id="@+id/provide_feedback_button"
-            style="@style/bank_blue_hyperlink_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"                      
-   			android:layout_marginBottom="@dimen/between_related_elements_padding"
-            android:layout_marginTop="@dimen/orange_button_margin_top"
-            android:layout_weight="0.0625"
-            android:gravity="bottom"
-            android:singleLine="true"
-            android:text="@string/feedback_text" />
-    </LinearLayout>
+                <include
+                    android:id="@+id/need_help_footer"
+                    layout="@layout/old_general_need_help_footer" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/provide_feedback_button"
+                style="@style/bank_blue_hyperlink_small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/between_related_elements_padding"
+                android:layout_marginTop="@dimen/orange_button_margin_top"
+                android:layout_weight="0.0625"
+                android:gravity="bottom"
+                android:singleLine="true"
+                android:text="@string/feedback_text" />
+        </LinearLayout>
+
+        <com.discover.mobile.common.help.HelpWidget
+            android:id="@+id/help"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
 </ScrollView>
