--- a/Discover-Bank-Phone/res/layout/bank_header_progress.xml
+++ b/Discover-Bank-Phone/res/layout/bank_header_progress.xml
@@ -53,7 +53,7 @@
                 style="@style/status_check_mark"
                 android:layout_toLeftOf="@+id/step2_text"
                 android:contentDescription="@null"
-                android:visibility="invisible"
+                android:visibility="gone"
                 android:paddingTop="@dimen/breadcrumb_confirm_toppadding" />
 
             <ImageView
