--- a/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
+++ b/Discover-Bank-Phone/res/layout/bank_select_search_payee.xml
@@ -1,61 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:fillViewport="true"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:fillViewport="true" >
 
     <RelativeLayout
-       android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/light_gray_bkgrd"
         android:paddingBottom="@dimen/forms_inner_padding"
         android:paddingLeft="@dimen/forms_inner_padding"
-        android:paddingRight="@dimen/forms_inner_padding">
-
-        <ImageButton
-            android:id="@+id/help"
-            style="@style/orange_help_button"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true" />
+        android:paddingRight="@dimen/forms_inner_padding" >
 
         <TextView
             android:id="@+id/select_payee_title"
             style="@style/page_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/table_inner_padding"
-            android:layout_toLeftOf="@+id/help"
             android:layout_alignParentLeft="true"
-            android:text="@string/select_payee_title"/>
-        
+            android:layout_marginBottom="@dimen/table_inner_padding"
+            android:text="@string/select_payee_title" />
+
         <TextView
             android:id="@+id/matches"
+            style="@style/normal_static_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/select_payee_title"
-            android:text="@string/bank_matches_for"
             android:layout_marginBottom="@dimen/forms_inner_padding"
-            style="@style/normal_static_text"/>
-        
-         <TextView
+            android:text="@string/bank_matches_for" />
+
+        <TextView
             android:id="@+id/search_name"
-            android:layout_toRightOf="@+id/matches"
+            style="@style/body_copy_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/select_payee_title"
-            android:text="@string/bank_connie_smith"
             android:layout_marginBottom="@dimen/forms_inner_padding"
-            style="@style/body_copy_title"/>
-        
+            android:layout_toRightOf="@+id/matches"
+            android:text="@string/bank_connie_smith" />
+
         <LinearLayout
             android:id="@+id/payee_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_below="@+id/matches"
-            android:layout_marginBottom="@dimen/groups_of_elements_padding"/>
-        
+            android:layout_marginBottom="@dimen/groups_of_elements_padding"
+            android:orientation="vertical" />
+
+        <com.discover.mobile.common.help.HelpWidget
+            android:id="@+id/help"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
-    
 
 </ScrollView>
