--- a/Discover-Bank-Phone/res/layout/payee_no_eligible.xml
+++ b/Discover-Bank-Phone/res/layout/payee_no_eligible.xml
@@ -10,14 +10,6 @@
         android:paddingLeft="@dimen/forms_inner_padding" 
         android:paddingBottom="@dimen/forms_inner_padding">
 
-        <ImageButton
-            android:id="@+id/help"
-            style="@style/orange_help_button"
-            android:layout_width="@dimen/orange_help_button_size"
-            android:layout_height="@dimen/orange_help_button_size"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true" />
-
         <TextView
             android:id="@+id/pay_bills_on_go_title"
             style="@style/page_title"
@@ -159,6 +151,11 @@
             android:drawablePadding="@dimen/between_related_elements_padding"
             android:layout_gravity="center"
             android:text="@string/bank_open_account" />
+        
+         <com.discover.mobile.common.help.HelpWidget
+            android:id="@+id/help"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
 </ScrollView>
