--- a/Discover-Commons/res/values/dimens.xml
+++ b/Discover-Commons/res/values/dimens.xml
@@ -4,9 +4,8 @@
     <dimen name="edit_text_corner_radius">5dp</dimen>
     <dimen name="edit_text_stroke_width">1dp</dimen>
     <dimen name="input_field_height">38dp</dimen>
-    
     <dimen name="modal_orange_margin_bottom">15dp</dimen>
- 	<dimen name="modal_orange_margin_top">17dp</dimen>
+    <dimen name="modal_orange_margin_top">17dp</dimen>
     <dimen name="modal_top_padding">45dp</dimen>
     <dimen name="modal_right_padding">17dp</dimen>
     <dimen name="modal_left_padding">17dp</dimen>
@@ -16,8 +15,8 @@
     <dimen name="modal_top_dummy_view">30dp</dimen>
     <dimen name="modal_text_padding">17dp</dimen>
     <dimen name="modal_footer_topmargin">35dp</dimen>
-    
-     <!--  Discover Padding -->
+
+    <!-- Discover Padding -->
     <dimen name="forms_inner_padding">12dp</dimen>
     <dimen name="content_padding">8dp</dimen>
     <dimen name="call_to_actions_padding">15dp</dimen>
@@ -31,49 +30,48 @@
     <dimen name="orange_help_button_size">30dp</dimen>
     <dimen name="toggle_button_height">35dp</dimen>
     <dimen name="search_bar_arrow_margin_top">16dp</dimen>
-    
-     <!-- Discover Font Sizes -->
+
+    <!-- Discover Font Sizes -->
     <dimen name="title_max">27sp</dimen>
     <dimen name="title_min">25sp</dimen>
     <dimen name="title_mid">26sp</dimen>
-    
     <dimen name="body_copy_max">21sp</dimen>
     <dimen name="body_copy_min">17sp</dimen>
     <dimen name="body_copy_mid">19sp</dimen>
-    
     <dimen name="small_copy_max">17sp</dimen>
     <dimen name="small_copy_min">14sp</dimen>
     <dimen name="small_copy_mid">15sp</dimen>
-    
     <dimen name="table_inner_padding">15dp</dimen>
     <dimen name="white_button_left_right_padding">15dp</dimen>
     <dimen name="white_button_margin_top">15dp</dimen>
-    
-     <!-- Navigation Menu -->
+
+    <!-- Navigation Menu -->
     <dimen name="nav_menu_shadow_width">15dp</dimen>
     <dimen name="nav_menu_offset">100dp</dimen>
     <dimen name="nav_menu_list_padding">10dp</dimen>
     <dimen name="nav_footer_padding">15dp</dimen>
-     <dimen name="nav_footer_divider_height">15dp</dimen>
-     <dimen name="nav_footer_divider_width">1dp</dimen>
-     <dimen name="nav_divider_height">3dp</dimen>
-     <dimen name="nav_section_height">45dp</dimen>
-     <dimen name="nav_section_pading">15dp</dimen>
-     <dimen name="nav_sub_section_pading">30dp</dimen>
-     <dimen name="nav_section_size">16dp</dimen>
-     <dimen name="nav_image_padding">10dp</dimen>
-     <dimen name="nav_footer_height">1dp</dimen>
-     
-     <!-- Logout Button -->
-     <dimen name="logout_padding">6dp</dimen>
-     <dimen name="logout_margin_top">4dp</dimen>
-     <dimen name="logout_margin_bottom">1dp</dimen>
-     
-     <!-- Divider Dimensions -->
-     <dimen name="divider_height">1dp</dimen>
-     
+    <dimen name="nav_footer_divider_height">15dp</dimen>
+    <dimen name="nav_footer_divider_width">1dp</dimen>
+    <dimen name="nav_divider_height">3dp</dimen>
+    <dimen name="nav_section_height">45dp</dimen>
+    <dimen name="nav_section_pading">15dp</dimen>
+    <dimen name="nav_sub_section_pading">30dp</dimen>
+    <dimen name="nav_section_size">16dp</dimen>
+    <dimen name="nav_image_padding">10dp</dimen>
+    <dimen name="nav_footer_height">1dp</dimen>
+
+    <!-- Logout Button -->
+    <dimen name="logout_padding">6dp</dimen>
+    <dimen name="logout_margin_top">4dp</dimen>
+    <dimen name="logout_margin_bottom">1dp</dimen>
+
+    <!-- Divider Dimensions -->
+    <dimen name="divider_height">1dp</dimen>
+
     <!-- Schedule Payments static list height -->
     <dimen name="listview_vertical_height">70dp</dimen>
-        
-    
+
+    <!-- View Pager Nav Margin -->
+    <dimen name="next_button_margin">60dp</dimen>
+
 </resources>
