DE3226 - Joint Owner Payments - Display and Deletion (QC# 90378) 3226 DE3220 - Incorrect Text on Schedule a Payment Screen when no payees are set up (Android) DE3227 - Incorrect Select Account Field in Schedule Payments (Android and iOS) (QC# 90460)
Defects:
- Verified that delete and edit is NOT displayed in Payment Detail Page if a Scheduled Payment has jointPayment set to true
- Verified that delete and edit is displayed in Payment Detail Page if a Scheduled Payment has jointPayment set to false
- Verified nickname is displayed correctly in review payments
- Verified nickname is displayed correctly in Payment details
- Verified Payment detail works correctly on orientation change for both scheduled payment that is joint vs not being joint
- Verified correct text is displayed for Managed Payees - Select Payee when no payees
- Verified correct text is displayed for Pay Bill - Select Payee when no payees
- Verified only Checking and MMA accounts are allowed to be selected from scheduled payment page

--- a/Discover-Bank-Phone/res/values/strings_bank_payees.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payees.xml
@@ -36,4 +36,5 @@
 	<string name="bank_add_another">Add Payee</string>
 	<string name="bank_dollar_sign">$</string>
 	<string name="bank_deposit_amount">Deposit Amount</string>
+	<string name="bank_payee_empty">You currently have no payees set up.</string>
 </resources>
