--- a/Discover-Bank-Phone/res/values/strings_bank_payment.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payment.xml
@@ -19,7 +19,7 @@
 
 	<!-- Select a payee strings -->
 	<string name="select_payee_title">Select Payee</string>
-	<string name="select_payee_empty">You currently have no payees set up.</string>
+	<string name="select_payee_empty">You have no payees set up. You must set up payees in order to pay bills.</string>
 	<string name="select_payee_add">Add Payee</string>
 	<string name="select_payee_add_new">Add New Payee</string>
 	<string name="select_payee_no_payees">Add Payee</string>
