--- a/Discover-Bank-Phone/res/values/strings_bank_payees.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_payees.xml
@@ -34,4 +34,7 @@
 	<string name="bank_add_confirm">The new payee has been setup. You may now schedule a payment.</string>
 	<string name="bank_sch_payment">Schedule a Payment</string>
 	<string name="bank_add_another">Add Payee</string>
+	<string name="bank_dollar_sign">$</string>
+	<string name="bank_deposit_amount">Deposit Amount</string>
+	<string name="bank_payee_empty">You currently have no payees set up.</string>
 </resources>
