--- a/Discover-Commons/res/values/strings_help_menu.xml
+++ b/Discover-Commons/res/values/strings_help_menu.xml
@@ -4,5 +4,6 @@
     <string name="help_all_faq">All FAQs</string>
     <string name="help_menu_number">1-800-290-9885</string>
     <string name="pay_bills_help">Pay Bills</string>
+    <string name="check_deposit_help">Check Deposit</string>
     
 </resources>
