--- a/Discover-Commons/res/layout/help_widget.xml
+++ b/Discover-Commons/res/layout/help_widget.xml
@@ -14,6 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/help"
+        android:layout_marginTop="25dp"
+        android:layout_alignParentTop="true" 
         android:visibility="invisible" >
 
         <ImageView
@@ -21,19 +23,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="28dp"
+            android:layout_marginRight="20dp"
             android:layout_below="@+id/help"
-            android:background="@drawable/orange_arrow_up" />
+            android:background="@drawable/anchor_triangle_blue" />
 
         <ListView
             android:id="@+id/content"
             android:layout_width="200dp"
-            android:layout_height="75dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/triangle"
             android:layout_marginRight="@dimen/between_related_elements_padding"
-            android:background="@color/white"
-            android:orientation="vertical" />
+            android:background="@drawable/help_menu_background"
+            android:divider="@drawable/help_table_divider"
+            android:dividerHeight="2dp"/>
     </RelativeLayout>
 
 </RelativeLayout>
