--- a/Discover-Bank-Phone/res/values/strings_bank_account.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_account.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--  Account Summary Strings --> 
+
+    <!-- Account Summary Strings -->
     <string name="bank_savings_account">Savings Accounts</string>
     <string name="bank_checking_account">Checking Accounts</string>
     <string name="bank_ira_account">Retirement Plans</string>
     <string name="bank_loan_account">Personal Loans</string>
     <string name="bank_unknown_account">Other Accounts</string>
-     
+
     <!-- Account Activity Strings -->
     <string name="activity_screen_title">Account Activity</string>
     <string name="activity_title">Discover Online Checking</string>
     <string name="recent_activity_date">Date</string>
-	<string name="recent_activity_description">Description</string>
-	<string name="recent_activity_amount">Amount</string>
+    <string name="recent_activity_description">Description</string>
+    <string name="recent_activity_amount">Amount</string>
     <string name="activity_online_checking">Online Checking:</string>
     <string name="activity_available_balance">Available Balance:</string>
     <string name="activity_current_balance">Current Balance:</string>
@@ -22,4 +23,10 @@
     <string name="activity_no_posted">You have no account activity.</string>
     <string name="activity_table_name">Transactions</string>
     <string name="activity_go_to_top">Back to Top</string>
+
+    <!-- Account - Skipped SSO Signin -->
+    <string name="skipsso_modal_title">Modal Title</string>
+    <string name="skipsso_modal_body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
+    <string name="skipsso_modal_button">Okay</string>
+
 </resources>
