--- a/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
+++ b/Discover-Bank-Phone/res/values/strings_bank_deposit.xml
@@ -5,7 +5,7 @@
     <string name="bank_deposit_page_title">Welcome to Mobile Check Deposit</string>
     <string name="bank_deposit_enter_details">Enter Details</string>
     <string name="bank_deposit_capture">Capture</string>
-    <string name="bank_deposit_confirmation">Confirmation</string>
+    <string name="bank_deposit_confirmation">Confirm</string>
     <string name="bank_deposit_select_account">Select Account</string>
     <string name="bank_deposit_amount_hint">0.00</string>
     <string name="bank_deposit_invalid_amount">Invalid amount</string>
