US7031: Changing of items based on where they are in the adapter and if they should be dark.

--- a/Discover-Commons/res/values/dimens.xml
+++ b/Discover-Commons/res/values/dimens.xml
@@ -73,5 +73,7 @@
 
     <!-- View Pager Nav Margin -->
     <dimen name="next_button_margin">60dp</dimen>
+    
+    <dimen name="help_rounded_corner">6dp</dimen>
 
 </resources>
