--- a/Discover-Bank-Phone/res/layout/review_payments_header.xml
+++ b/Discover-Bank-Phone/res/layout/review_payments_header.xml
@@ -4,79 +4,84 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:id="@+id/buttons"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/forms_inner_padding"
-        android:layout_marginRight="@dimen/forms_inner_padding"
-        android:layout_marginTop="40dp"
-        android:weightSum="3" >
+        android:layout_height="match_parent" >
 
-        <ToggleButton
-            android:id="@+id/toggle_left"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/buttons"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/toggle_left_on"
-            android:checked="true"
-            android:textColor="@color/white"
-            android:textOff="@string/review_payments_scheduled_payments"
-            android:textOn="@string/review_payments_scheduled_payments"
-            android:paddingTop="@dimen/between_related_elements_padding"
-            android:paddingBottom="@dimen/between_related_elements_padding"
-            android:textSize="14sp" />
+            android:layout_marginLeft="@dimen/forms_inner_padding"
+            android:layout_marginRight="@dimen/forms_inner_padding"
+            android:layout_marginTop="40dp"
+            android:weightSum="3" >
 
-        <ToggleButton
-            android:id="@+id/toggle_middle"
-            android:layout_width="wrap_content"
+            <ToggleButton
+                android:id="@+id/toggle_left"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/toggle_left_on"
+                android:checked="true"
+                android:paddingBottom="@dimen/between_related_elements_padding"
+                android:paddingTop="@dimen/between_related_elements_padding"
+                android:textColor="@color/white"
+                android:textOff="@string/review_payments_scheduled_payments"
+                android:textOn="@string/review_payments_scheduled_payments"
+                android:textSize="14sp" />
+
+            <ToggleButton
+                android:id="@+id/toggle_middle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/toggle_mid_off"
+                android:checked="false"
+                android:paddingBottom="@dimen/between_related_elements_padding"
+                android:paddingTop="@dimen/between_related_elements_padding"
+                android:textColor="@color/body_copy"
+                android:textOff="@string/review_payments_completed_payments"
+                android:textOn="@string/review_payments_completed_payments"
+                android:textSize="14sp" />
+
+            <ToggleButton
+                android:id="@+id/toggle_right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/toggle_right_off"
+                android:checked="false"
+                android:paddingBottom="@dimen/between_related_elements_padding"
+                android:paddingTop="@dimen/between_related_elements_padding"
+                android:textColor="@color/body_copy"
+                android:textOff="@string/review_payments_canceled_payments"
+                android:textOn="@string/review_payments_canceled_payments"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <com.discover.mobile.bank.ui.widgets.StatusMessageView
+            android:id="@+id/status"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/toggle_mid_off"
-            android:checked="false"
-            android:textColor="@color/body_copy"
-            android:textOff="@string/review_payments_completed_payments"
-            android:textOn="@string/review_payments_completed_payments"
-            android:paddingTop="@dimen/between_related_elements_padding"
-            android:paddingBottom="@dimen/between_related_elements_padding"
-            android:textSize="14sp" />
+            android:layout_below="@+id/buttons"
+            android:layout_marginLeft="@dimen/forms_inner_padding"
+            android:layout_marginRight="@dimen/forms_inner_padding" />
 
-        <ToggleButton
-            android:id="@+id/toggle_right"
-            android:layout_width="wrap_content"
+        <com.discover.mobile.bank.ui.table.TableTitles
+            android:id="@+id/table_titles"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/toggle_right_off"
-            android:checked="false"
-            android:textColor="@color/body_copy"
-            android:textOff="@string/review_payments_canceled_payments"
-            android:textOn="@string/review_payments_canceled_payments"
-            android:paddingTop="@dimen/between_related_elements_padding"
-            android:paddingBottom="@dimen/between_related_elements_padding"
-            android:textSize="14sp" />
-    </LinearLayout>
-    
-    <com.discover.mobile.bank.ui.widgets.StatusMessageView
-        android:id="@+id/status"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/forms_inner_padding"
-        android:layout_marginRight="@dimen/forms_inner_padding"
-        android:layout_below="@+id/buttons"/>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/status"
+            android:layout_marginBottom="@dimen/between_related_elements_padding"
+            android:layout_marginTop="@dimen/groups_of_elements_padding" />
+    </RelativeLayout>
 
-    <com.discover.mobile.bank.ui.table.TableTitles
-        android:id="@+id/table_titles"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/status"
-        android:layout_marginBottom="@dimen/between_related_elements_padding"
-        android:layout_marginTop="@dimen/groups_of_elements_padding" />
-    
     <com.discover.mobile.common.help.HelpWidget
         android:id="@+id/help"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="120dp"/>
 
 </RelativeLayout>
