--- a/Discover-Bank-Phone/res/layout/account_toggle.xml
+++ b/Discover-Bank-Phone/res/layout/account_toggle.xml
@@ -4,11 +4,11 @@
     android:layout_height="wrap_content" >
 
     <RelativeLayout
+        android:id="@+id/acct_toggle_bubble"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/acct_toggle_indicator"
-        android:background="@color/white"
-        android:orientation="vertical" >
+        android:background="@drawable/account_widget_body" >
 
         <!-- Title & Cancel(X) -->
 
@@ -16,28 +16,33 @@
             android:id="@+id/acct_toggle_title_section"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_alignParentTop="true"
-            android:padding="@dimen/between_related_elements_padding" >
+            android:layout_alignParentTop="true" >
 
             <TextView
                 style="@style/plain_body_copy_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:paddingLeft="21dp"
+                android:paddingTop="10dp"
                 android:text="@string/toggle_select_account" />
 
             <ImageView
+                android:id="@+id/acct_toggle_x"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="3dp"
+                android:paddingRight="25dp"
+                android:paddingTop="8dp"
                 android:src="@drawable/x_gray" />
         </RelativeLayout>
 
         <View
             android:id="@+id/acct_toggle_divider"
             android:layout_width="match_parent"
+            android:layout_marginRight="9dp"
+            android:layout_marginLeft="9dp"
             android:layout_height="@dimen/divider_height"
             android:layout_below="@id/acct_toggle_title_section"
             android:background="@drawable/gray_solid_line" />
@@ -56,9 +61,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="3dp"
-                android:padding="@dimen/between_related_elements_padding"
-                android:src="@drawable/black_check_mark"
-                android:visibility="invisible" />
+                android:paddingLeft="21dp"
+                android:visibility="invisible"
+                android:src="@drawable/black_check_mark" />
 
             <TextView
                 android:id="@+id/acct_toggle_card_text"
@@ -68,6 +73,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_toRightOf="@id/acct_toggle_card_check"
                 android:paddingBottom="@dimen/between_related_elements_padding"
+                android:paddingLeft="7dp"
                 android:paddingTop="@dimen/between_related_elements_padding"
                 android:text="it Card" />
 
@@ -79,6 +85,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_toRightOf="@id/acct_toggle_card_check"
                 android:paddingBottom="@dimen/between_related_elements_padding"
+                android:paddingLeft="7dp"
                 android:paddingTop="@dimen/between_related_elements_padding"
                 android:text="acct ending in 1234" />
         </RelativeLayout>
@@ -86,7 +93,9 @@
         <View
             android:id="@+id/acct_toggle_dash_divider"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/divider_height"
+            android:layout_height="1.5dp"
+            android:layout_marginRight="9dp"
+            android:layout_marginLeft="9dp"
             android:layout_below="@id/acct_toggle_card_section"
             android:background="@drawable/gray_dash_line" />
 
@@ -104,7 +113,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="3dp"
-                android:padding="@dimen/between_related_elements_padding"
+                android:paddingBottom="9dp"
+                android:paddingLeft="21dp"
                 android:src="@drawable/black_check_mark" />
 
             <TextView
@@ -114,8 +124,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/acct_toggle_bank_check"
-                android:paddingBottom="@dimen/between_related_elements_padding"
-                android:paddingTop="@dimen/between_related_elements_padding"
+                android:paddingBottom="@dimen/account_toggle_outside_padding"
+                android:paddingLeft="7dp"
+                android:paddingTop="9dp"
                 android:text="Discover Bank"
                 android:textStyle="bold" />
         </RelativeLayout>
@@ -127,6 +138,6 @@
         android:id="@+id/acct_toggle_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/bank_icon_grey" />
+        android:src="@drawable/account_widget_triangle" />
 
 </RelativeLayout>
