--- a/Discover-Commons/res/values/dimens.xml
+++ b/Discover-Commons/res/values/dimens.xml
@@ -30,6 +30,7 @@
     <dimen name="orange_help_button_size">30dp</dimen>
     <dimen name="toggle_button_height">35dp</dimen>
     <dimen name="search_bar_arrow_margin_top">8dp</dimen>
+    <dimen name="account_toggle_outside_padding">18dp</dimen>
 
     <!-- Discover Font Sizes -->
     <dimen name="title_max">27sp</dimen>
